--- a/index.html
+++ b/index.html
@@ -33,7 +33,12 @@
       </div>
     </div>
   </nav>
-
+  <!--My description-->
+   <section id="home" class="py-5">
+      <div class="container mx-auto">
+        <img src="Muallim.png" alt="muallim" class="rounded">
+      </div>
+   </section>
   <!-- About Me Section -->
   <section id="about" class="py-5">
     <div class="container">
