--- a/index.html
+++ b/index.html
@@ -4,60 +4,91 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>My Portfolio</title>
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" 
+    rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" 
   rel="stylesheet" 
   integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" 
   crossorigin="anonymous">
 </head>
-<body>
+<body class="mx-auto">
 
   <!-- Navbar -->
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+  <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container">
-      <a class="navbar-brand" href="#">My Portfolio</a>
+      <a class="navbar-brand" href="#home">
+      <h2 class="text-success"><b>MUALLIM</b></h2>
+    </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav ms-auto">
           <li class="nav-item">
+            <a class="nav-link" href="#home">Home</a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link" href="#about">About</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#projects">Projects</a>
+            <a class="nav-link" href="#projects">Skills</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#contact">Contact</a>
+            <a href="#contact" class="btn btn-success">Contact Me</a>
           </li>
         </ul>
       </div>
     </div>
   </nav>
   <!--My description-->
-   <section id="home" class="py-5">
-      <div class="container mx-auto">
-        <img src="Muallim.png" alt="muallim" class="rounded">
-      </div>
+   <section id="home" class="">
+      <div class="container px-4 py-5 my-5 text-center">
+        <img src="Images/Muallim.png" alt="muallim" class="d-block mx-auto mb-4 mt-4 shadow rounded-circle" width="150" height="150">
+        <h1 class="text-muted fw-bold">Hi, I am Muallim</h1>
+        <p style="font-size: 25px;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae temporibus atque nemo delectus corporis magnam fuga voluptatum quibusdam, dicta voluptas, 
+          ut praesentium reiciendis quis assumenda, minima doloribus commodi veritatis ipsum?</p>
+          <a href="#contact" class="btn btn-success">Contact Me</a>
+        </div>
    </section>
   <!-- About Me Section -->
   <section id="about" class="py-5">
     <div class="container">
-      <h2 class="text-center mb-4">About Me</h2>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec odio.</p>
+      <h2 class="text-center mb-4 text-success fw-bold">About Me</h2>
+      <p style="font-size: 25px;">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet aspernatur itaque ducimus, 
+        atque, vero unde maxime tempora reprehenderit porro molestias officiis dolores aliquam deserunt,
+         veritatis vitae. Accusamus reprehenderit beatae voluptatum.</p>
     </div>
   </section>
 
   <!-- Projects Section -->
   <section id="projects" class="py-5 bg-light">
     <div class="container">
-      <h2 class="text-center mb-4">Projects</h2>
+      <h2 class="text-center mb-4 text-success fw-bold">My Skills</h2>
       <div class="row">
         <div class="col-lg-4 mb-4">
           <div class="card">
             <div class="card-body">
-              <h5 class="card-title">Project 1</h5>
-              <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-              <a href="#" class="btn btn-primary">Learn More</a>
+              <h5 class="card-title">HTML</h5>
+              <p class="card-text">HyperText Markup Language</p>
+              <a href="#" class="btn btn-success">Learn More</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-4 mb-4">
+          <div class="card">
+            <div class="card-body">
+              <h5 class="card-title">CSS</h5>
+              <p class="card-text">Cascading Style Sheet</p>
+              <a href="#" class="btn btn-success">Learn More</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-4 mb-4">
+          <div class="card">
+            <div class="card-body">
+              <h5 class="card-title">BOOTSTRAP5</h5>
+              <p class="card-text">The Most Popular CSS framework</p>
+              <a href="#" class="btn btn-success">Learn More</a>
             </div>
           </div>
         </div>
@@ -67,26 +98,41 @@
   </section>
 
   <!-- Contact Section -->
-  <section id="contact" class="py-5">
+  <section id="contact" class="py-5 d-flex bg-dark text-light">
     <div class="container">
-      <h2 class="text-center mb-4">Contact Me</h2>
+      <h2 class="text-center mb-4 text-success fw-bold">Contact Me</h2>
       <form>
         <div class="mb-3">
           <label for="name" class="form-label">Name</label>
           <input type="text" class="form-control" id="name">
         </div>
         <div class="mb-3">
-          <label for="email" class="form-label">Email</label>
-          <input type="email" class="form-control" id="email">
+          <label for="email_phone" class="form-label">Your Contact</label>
+          <input type="text" class="form-control" id="email_phone" placeholder="Email or phone">
         </div>
         <div class="mb-3">
           <label for="message" class="form-label">Message</label>
           <textarea class="form-control" id="message" rows="3"></textarea>
         </div>
-        <button type="submit" class="btn btn-primary">Submit</button>
       </form>
+      <div class="text-center">
+        <button type="submit" class="btn btn-success mt-4 mb-4">Send</button>
+      </div>
+    </div>
+    <div class="container">
+              <a href=""><i class="fab fa-facebook"></i></a>
     </div>
   </section>
+  <footer class="py-4 bg-success text-light text-center">
+    <div class="p-2 pt-4">
+      <i class="fab fa-facebook"></i>
+      <i class="fab fa-twitter"></i>
+      <i class="fab fa-instagram"></i>
+    </div>
+    <div class="container text-center">
+      <p>&copy; 2024 Muhammad Bashir</p>
+    </div>
+  </footer>
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" 
   integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" 
   crossorigin="anonymous"></script>
