--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
       </div>
     </div>
     <div class="container">
-              <a href=""><i class="fab fa-facebook"></i></a>
+              <a><i class="fab fa-facebook"></i></a>
     </div>
   </section>
   <footer class="py-4 bg-success text-light text-center">
