--- a/index.html
+++ b/index.html
@@ -10,12 +10,13 @@
   rel="stylesheet" 
   integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" 
   crossorigin="anonymous">
+  <link rel="stylesheet" href="index.css">
 </head>
 <body class="mx-auto">
-
+  <i class="fa fa-arrow-up" aria-hidden="true" onclick = "scrollToTop();"></i>
   <!-- Navbar -->
-  <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <div class="container">
+  <nav class="navbar navbar-expand-lg navbar-light bg-light shadow-sm" >
+    <div class="container-fluid" style="position: relative;">
       <a class="navbar-brand" href="#home">
       <h2 class="text-success"><b>MUALLIM</b></h2>
     </a>
@@ -28,45 +29,36 @@
             <a class="nav-link" href="#home">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#about">About</a>
+            <a class="nav-link" href="about.html">About</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#projects">Skills</a>
+            <a class="nav-link" href="#myskills">Skills</a>
           </li>
           <li class="nav-item">
-            <a href="#contact" class="btn btn-success">Contact Me</a>
+            <a href="contact.html" class="btn btn-success">Contact Me</a>
           </li>
         </ul>
       </div>
     </div>
   </nav>
-  <!--My description-->
+  <!--My Description Section-->
    <section id="home" class="">
       <div class="container px-4 py-5 my-5 text-center">
         <img src="Images/Muallim.png" alt="muallim" class="d-block mx-auto mb-4 mt-4 shadow rounded-circle" width="150" height="150">
-        <h1 class="text-muted fw-bold">Hi, I am Muallim</h1>
-        <p style="font-size: 25px;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae temporibus atque nemo delectus corporis magnam fuga voluptatum quibusdam, dicta voluptas, 
-          ut praesentium reiciendis quis assumenda, minima doloribus commodi veritatis ipsum?</p>
-          <a href="#contact" class="btn btn-success">Contact Me</a>
+        <h1 class="fw-bold">Hi, I am <span class="text-success"> Muhammad Bashir(Muallim)</span> Web developer 
+          intern at Shahuci Global Recourses <a href="https://www.SGR.com.ng" class="text-success">SGR</a>
+        </h1>
+          <a href="https://www.twitter.com/_@MuallimB2000_/" class="btn btn-success">follow Me <i class="fab fa-twitter"></i></a>
         </div>
    </section>
-  <!-- About Me Section -->
-  <section id="about" class="py-5">
-    <div class="container">
-      <h2 class="text-center mb-4 text-success fw-bold">About Me</h2>
-      <p style="font-size: 25px;">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet aspernatur itaque ducimus, 
-        atque, vero unde maxime tempora reprehenderit porro molestias officiis dolores aliquam deserunt,
-         veritatis vitae. Accusamus reprehenderit beatae voluptatum.</p>
-    </div>
-  </section>
-
-  <!-- Projects Section -->
-  <section id="projects" class="py-5 bg-light">
-    <div class="container">
-      <h2 class="text-center mb-4 text-success fw-bold">My Skills</h2>
+ 
+  <!-- My Skills Section -->
+  <section id="myskills" class="py-5 bg-light text-dark">
+    <div class="container sec3">
+      <h2 class="text-center mb-4 fw-bold">My Skills</h2>
       <div class="row">
         <div class="col-lg-4 mb-4">
-          <div class="card">
+          <div class="card bg-light text-dark">
             <div class="card-body">
               <h5 class="card-title">HTML</h5>
               <p class="card-text">HyperText Markup Language</p>
@@ -75,7 +67,7 @@
           </div>
         </div>
         <div class="col-lg-4 mb-4">
-          <div class="card">
+          <div class="card bg-light text-dark">
             <div class="card-body">
               <h5 class="card-title">CSS</h5>
               <p class="card-text">Cascading Style Sheet</p>
@@ -84,7 +76,7 @@
           </div>
         </div>
         <div class="col-lg-4 mb-4">
-          <div class="card">
+          <div class="card bg-light text-dark">
             <div class="card-body">
               <h5 class="card-title">BOOTSTRAP5</h5>
               <p class="card-text">The Most Popular CSS framework</p>
@@ -92,43 +84,11 @@
             </div>
           </div>
         </div>
-        <!-- Add more project cards here -->
       </div>
     </div>
   </section>
-
-  <!-- Contact Section -->
-  <section id="contact" class="py-5 d-flex bg-dark text-light">
-    <div class="container">
-      <h2 class="text-center mb-4 text-success fw-bold">Contact Me</h2>
-      <form>
-        <div class="mb-3">
-          <label for="name" class="form-label">Name</label>
-          <input type="text" class="form-control" id="name">
-        </div>
-        <div class="mb-3">
-          <label for="email_phone" class="form-label">Your Contact</label>
-          <input type="text" class="form-control" id="email_phone" placeholder="Email or phone">
-        </div>
-        <div class="mb-3">
-          <label for="message" class="form-label">Message</label>
-          <textarea class="form-control" id="message" rows="3"></textarea>
-        </div>
-      </form>
-      <div class="text-center">
-        <button type="submit" class="btn btn-success mt-4 mb-4">Send</button>
-      </div>
-    </div>
-    <div class="container">
-              <a><i class="fab fa-facebook"></i></a>
-    </div>
-  </section>
+   
   <footer class="py-4 bg-success text-light text-center">
-    <div class="p-2 pt-4">
-      <i class="fab fa-facebook"></i>
-      <i class="fab fa-twitter"></i>
-      <i class="fab fa-instagram"></i>
-    </div>
     <div class="container text-center">
       <p>&copy; 2024 Muhammad Bashir</p>
     </div>
@@ -139,5 +99,17 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js" 
   integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+" 
   crossorigin="anonymous"></script>
+  <script type = "text/javascript">
+    window.addEventListener('scroll',function(){
+        var scroll = document.querySelector('.fa');
+        scroll.classList.toggle("active",window.scrollY>500)
+    })
+    function scrollToTop(){
+        window.scrollTo({
+            top:0,
+            behavior:'smooth'
+        })
+    }
+</script>
   </body>
 </html>
