--- a/contact.html
+++ b/contact.html
@@ -13,10 +13,10 @@
   <link rel="stylesheet" href="index.css">
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light shadow-sm" >
-        <div class="container-fluid" style="position: relative;">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light" >
+        <div class="container-fluid fixed-top shadow-sm bg-success">
           <a class="navbar-brand" href="#home">
-          <h2 class="text-success"><b>MUALLIM</b></h2>
+          <h2 class="text-light"><b>MUALLIM</b></h2>
         </a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -24,16 +24,16 @@
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ms-auto">
               <li class="nav-item">
-                <a class="nav-link" href="#home">Home</a>
+                <a class="nav-link" href="index.html">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#about">About</a>
+                <a class="nav-link" href="about.html">About</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#myskills">Skills</a>
+                <a class="nav-link" href="index.html">Skills</a>
               </li>
               <li class="nav-item">
-                <a href="contact.html" class="btn btn-success">Contact Me</a>
+                <a href="contact.html" class="btn btn-light">Contact Me</a>
               </li>
             </ul>
           </div>
@@ -41,7 +41,7 @@
       </nav>
      <!-- Contact Section -->
    <section id="contact" class="bg-light dark">
-    <h2 class="text-center mb-4  fw-bold">Contact Me</h2>
+    <h2 class="text-center mb-4 mt-5  fw-bold">Contact Me</h2>
     <div class="sec4__container">
       <div class="sec4__box1">
         <div class="sec4__content1">
