--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
 <body class="mx-auto">
   <i class="fa fa-arrow-up" aria-hidden="true" onclick = "scrollToTop();"></i>
   <!-- Navbar -->
-  <nav class="navbar navbar-expand-lg navbar-light bg-light shadow-sm" >
-    <div class="container-fluid" style="position: relative;">
+  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <div class="container-fluid shadow-sm fixed-top bg-success  text-light">
       <a class="navbar-brand" href="#home">
-      <h2 class="text-success"><b>MUALLIM</b></h2>
+      <h2 class="text-light"><b>MUALLIM</b></h2>
     </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -35,7 +35,7 @@
             <a class="nav-link" href="#myskills">Skills</a>
           </li>
           <li class="nav-item">
-            <a href="contact.html" class="btn btn-success">Contact Me</a>
+            <a href="contact.html" class="btn btn-light">Contact Me</a>
           </li>
         </ul>
       </div>
@@ -44,7 +44,7 @@
   <!--My Description Section-->
    <section id="home" class="">
       <div class="container px-4 py-5 my-5 text-center">
-        <img src="Images/Muallim.png" alt="muallim" class="d-block mx-auto mb-4 mt-4 shadow rounded-circle" width="150" height="150">
+        <img src="Images/Muallim.png" alt="muallim" class="d-block mx-auto mb-4 mt-4 shadow rounded-circle" width="180" height="180">
         <h1 class="fw-bold">Hi, I am <span class="text-success"> Muhammad Bashir(Muallim)</span> Web developer 
           intern at Shahuci Global Recourses <a href="https://www.SGR.com.ng" class="text-success">SGR</a>
         </h1>
@@ -62,7 +62,7 @@
             <div class="card-body">
               <h5 class="card-title">HTML</h5>
               <p class="card-text">HyperText Markup Language</p>
-              <a href="#" class="btn btn-success">Learn More</a>
+              <a href="https://www.w3schools.com/html/default.asp" class="btn btn-success">Learn More</a>
             </div>
           </div>
         </div>
@@ -71,7 +71,7 @@
             <div class="card-body">
               <h5 class="card-title">CSS</h5>
               <p class="card-text">Cascading Style Sheet</p>
-              <a href="#" class="btn btn-success">Learn More</a>
+              <a href="https://www.w3schools.com/css/default.asp" class="btn btn-success">Learn More</a>
             </div>
           </div>
         </div>
@@ -80,15 +80,14 @@
             <div class="card-body">
               <h5 class="card-title">BOOTSTRAP5</h5>
               <p class="card-text">The Most Popular CSS framework</p>
-              <a href="#" class="btn btn-success">Learn More</a>
+              <a href="https://www.w3schools.com/bootstrap5/index.php" class="btn btn-success">Learn More</a>
             </div>
           </div>
         </div>
       </div>
     </div>
   </section>
-   
-  <footer class="py-4 bg-success text-light text-center">
+   <footer class="py-4 bg-success text-light text-center mb-0">
     <div class="container text-center">
       <p>&copy; 2024 Muhammad Bashir</p>
     </div>
