--- a/about.html
+++ b/about.html
@@ -39,18 +39,10 @@
           </div>
         </div>
       </nav>
-<!-- About Me Section>
-  <section id="about" class="py-5">
-    <div class="container sec2">
-      <h2 class="text-center mb-4 text-success fw-bold">About Me</h2>
-      <p style="font-size: 25px;">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet aspernatur itaque ducimus, 
-        atque, vero unde maxime tempora reprehenderit porro molestias officiis dolores aliquam deserunt,
-         veritatis vitae. Accusamus reprehenderit beatae voluptatum.</p>
-    </div>
-  </section-->
+<!-- About Me Section-->
   <section class="sec2" id="section2">
     <div class="sec2__heading">
-      <h2 class="mt-4">about me</h2>
+      <h2 class="mt-5">about me</h2>
     </div>
     <div class="sec2__container">
       <div class="sec2__aboutme1">
@@ -90,6 +82,21 @@
     </div>
   </section>
   <footer class="py-4 bg-success text-light text-center">
+    <div class="footer_icons">
+      <ul>
+        <li>
+          <a href="#"><i class="fab fa-telegram"></i></a>
+        </li>
+        <li>
+          <a href="#"><i class="fab fa-whatsapp"></i></a>
+        </li>
+        <li>
+          <a href="#"><i class="fas fa-envelope"></i></a>
+        </li>
+         <li><a href="#"><i class="fab fa-facebook"></i></a>
+         </li>
+      </ul>
+    </div>
     <div class="container text-center">
       <p>&copy; 2024 Muhammad Bashir</p>
     </div>
