--- a/index.html
+++ b/index.html
@@ -54,11 +54,11 @@
  
   <!-- My Skills Section -->
   <section id="myskills" class="py-5 bg-light text-dark">
-    <div class="container sec3">
+    <div class="container Skills">
       <h2 class="text-center mb-4 fw-bold">My Skills</h2>
       <div class="row">
         <div class="col-lg-4 mb-4">
-          <div class="card bg-light text-dark">
+          <div class="card bg-light text-dark hover">
             <div class="card-body">
               <h5 class="card-title">HTML</h5>
               <p class="card-text">HyperText Markup Language</p>
@@ -67,7 +67,7 @@
           </div>
         </div>
         <div class="col-lg-4 mb-4">
-          <div class="card bg-light text-dark">
+          <div class="card bg-light text-dark hover">
             <div class="card-body">
               <h5 class="card-title">CSS</h5>
               <p class="card-text">Cascading Style Sheet</p>
@@ -76,7 +76,7 @@
           </div>
         </div>
         <div class="col-lg-4 mb-4">
-          <div class="card bg-light text-dark">
+          <div class="card bg-light text-dark hover">
             <div class="card-body">
               <h5 class="card-title">BOOTSTRAP5</h5>
               <p class="card-text">The Most Popular CSS framework</p>
@@ -88,6 +88,21 @@
     </div>
   </section>
    <footer class="py-4 bg-success text-light text-center mb-0">
+    <div class="footer_icons">
+    <ul>
+      <li>
+        <a href="#"><i class="fab fa-telegram"></i></a>
+      </li>
+      <li>
+        <a href="#"><i class="fab fa-whatsapp"></i></a>
+      </li>
+      <li>
+        <a href="#"><i class="fas fa-envelope"></i></a>
+      </li>
+       <li><a href="#"><i class="fab fa-facebook"></i></a>
+       </li>
+    </ul>
+  </div>
     <div class="container text-center">
       <p>&copy; 2024 Muhammad Bashir</p>
     </div>
