--- a/contact.html
+++ b/contact.html
@@ -122,6 +122,21 @@
     </div>
   </section>
   <footer class="py-4 bg-success text-light text-center">
+    <div class="footer_icons">
+      <ul>
+        <li>
+          <a href="#"><i class="fab fa-telegram"></i></a>
+        </li>
+        <li>
+          <a href="#"><i class="fab fa-whatsapp"></i></a>
+        </li>
+        <li>
+          <a href="#"><i class="fas fa-envelope"></i></a>
+        </li>
+         <li><a href="#"><i class="fab fa-facebook"></i></a>
+         </li>
+      </ul>
+    </div>
     <div class="container text-center">
       <p>&copy; 2024 Muhammad Bashir</p>
     </div>
