--- a/about.html
+++ b/about.html
@@ -13,6 +13,8 @@
   <link rel="stylesheet" href="index.css">
 </head>
 <body>
+  <i class="fa fa-arrow-up" aria-hidden="true" onclick = "scrollToTop();"></i>
+  <!--Navbar-->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid fixed-top shadow-sm bg-success">
           <a class="navbar-brand" href="#home">
@@ -107,5 +109,6 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js" 
   integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+" 
   crossorigin="anonymous"></script>
+  <script  src="index.js"></script>
 </body>
 </html>
