--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <i class="fa fa-arrow-up" aria-hidden="true" onclick = "scrollToTop();"></i>
   <!-- Navbar -->
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <div class="container-fluid shadow-sm fixed-top bg-success  text-light">
+    <div class="container-fluid shadow-sm fixed-top bg-success text-light">
       <a class="navbar-brand" href="#home">
       <h2 class="text-light"><b>MUALLIM</b></h2>
     </a>
@@ -113,17 +113,6 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js" 
   integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+" 
   crossorigin="anonymous"></script>
-  <script type = "text/javascript">
-    window.addEventListener('scroll',function(){
-        var scroll = document.querySelector('.fa');
-        scroll.classList.toggle("active",window.scrollY>500)
-    })
-    function scrollToTop(){
-        window.scrollTo({
-            top:0,
-            behavior:'smooth'
-        })
-    }
-</script>
+  <script  src="index.js"></script>
   </body>
 </html>
