--- a/about.html
+++ b/about.html
@@ -4,12 +4,13 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>My Portfolio</title>
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" 
-    rel="stylesheet">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" 
-  rel="stylesheet" 
-  integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" 
-  crossorigin="anonymous">
+  <!--Bootstrap font awesome-->
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" 
+  rel="stylesheet">
+  <link rel="canonical" href="https://getbootstrap.com/docs/5.0/examples/heroes/">
+  <!-- Bootstrap core CSS -->
+  <link href="assets/Bootstrap/css/bootstrap.min.css" rel="stylesheet">
+   <!--custom css-->
   <link rel="stylesheet" href="index.css">
 </head>
 <body>
@@ -42,17 +43,17 @@
         </div>
       </nav>
 <!-- About Me Section-->
-  <section class="sec2" id="section2">
-    <div class="sec2__heading">
+  <section class="about">
+    <div class="about_heading">
       <h2 class="mt-5">about me</h2>
     </div>
-    <div class="sec2__container">
-      <div class="sec2__aboutme1">
-        <div class="sec2__aboutme1Img">
-          <p><img src="Images/Muallim.png" alt="" />
+    <div class="about_container">
+      <div class="about_aboutme1">
+        <div class="about_aboutme1Img">
+          <img src="Images/Muallim.png"  alt="" />
         </div>
         <h2>Muhammad Bashir</h2>
-        <div class="sec2__aboutme1Social">
+        <div class="about_aboutme1Social">
           <ul>
             <li>
               <a href="#"><i class="fab fa-instagram"></i></a>
@@ -70,7 +71,7 @@
           </ul>
         </div>
       </div>
-      <div class="sec2__aboutme2">
+      <div class="about_aboutme2">
         <p>
           Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nulla
           reiciendis ullam atque dolores expedita debitis veritatis dolorum
@@ -83,6 +84,7 @@
       </div>
     </div>
   </section>
+  <!--Footer  section-->
   <footer class="py-4 bg-success text-light text-center">
     <div class="footer_icons">
       <ul>
@@ -103,12 +105,11 @@
       <p>&copy; 2024 Muhammad Bashir</p>
     </div>
   </footer>
-  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" 
-  integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" 
-  crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js" 
-  integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+" 
-  crossorigin="anonymous"></script>
+   <!-- scripts -->
+  <!-- Bootstrap -->
+  <script src="assets/Bootstrap/js/bootstrap.bundle.min.js"></script> 
+  <script src="assets/Bootstrap/js/bootstrap.min.js"></script> 
+    <!--Custom js-->
   <script  src="index.js"></script>
 </body>
 </html>
