--- a/contact.html
+++ b/contact.html
@@ -4,12 +4,13 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>My Portfolio</title>
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" 
-    rel="stylesheet">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" 
-  rel="stylesheet" 
-  integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" 
-  crossorigin="anonymous">
+  <!--Bootstrap font awesome-->
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" 
+  rel="stylesheet">
+  <link rel="canonical" href="https://getbootstrap.com/docs/5.0/examples/heroes/">
+  <!-- Bootstrap core CSS -->
+  <link href="assets/Bootstrap/css/bootstrap.min.css" rel="stylesheet">
+  <!--custom css-->
   <link rel="stylesheet" href="index.css">
 </head>
 <body>
@@ -42,7 +43,7 @@
         </div>
       </nav>
      <!-- Contact Section -->
-   <section id="contact" class="bg-light dark">
+   <section class="bg-light dark">
     <h2 class="text-center mb-4 mt-5  fw-bold">Contact Me</h2>
     <div class="sec4__container">
       <div class="sec4__box1">
@@ -91,18 +92,8 @@
           </ul>
         </div>
        </div>
-       <div class="sec4__box2">
-        <h3>Quick links</h3>
-        <div class="sec4__links">
-          <ul class="text-center">
-            <li><a href="index.html" class="text-success">Home</a></li>
-            <li><a href="about.html" class="text-success">About</a></li>
-            <li><a href="#myskills" class="text-success">Skill</a></li>
-          </ul>
-        </div>
-      </div>
-      <div class="sec4__box3">
-        <h3 class="text-center mb-4 fw-bold">Send Me a <span>Message</span></h3>
+      <div>
+        <h3 class="text-center mb-4 fw-bold">Send Me a Message</h3>
         <form>
           <div class="mb-3">
             <label for="name" class="form-label">Name</label>
@@ -123,6 +114,7 @@
       </div>
     </div>
   </section>
+  <!--Footer  section-->
   <footer class="py-4 bg-success text-light text-center">
     <div class="footer_icons">
       <ul>
@@ -143,12 +135,11 @@
       <p>&copy; 2024 Muhammad Bashir</p>
     </div>
   </footer>
-  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" 
-  integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" 
-  crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js" 
-  integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+" 
-  crossorigin="anonymous"></script>
+<!-- scripts -->
+<!-- Bootstrap -->
+<script src="assets/Bootstrap/js/bootstrap.bundle.min.js"></script> 
+<script src="assets/Bootstrap/js/bootstrap.min.js"></script> 
+  <!--Custom js-->
   <script  src="index.js"></script>
 </body>
 </html>
