--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>My Portfolio</title>
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" 
-    rel="stylesheet">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" 
-  rel="stylesheet" 
-  integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" 
-  crossorigin="anonymous">
+  <!--Bootstrap font awesome-->
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" 
+  rel="stylesheet">
+  <link rel="canonical" href="https://getbootstrap.com/docs/5.0/examples/heroes/">
+  <!-- Bootstrap core CSS -->
+  <link href="assets/Bootstrap/css/bootstrap.min.css" rel="stylesheet">
+  <!--Custom css style-->
   <link rel="stylesheet" href="index.css">
 </head>
 <body class="mx-auto">
@@ -51,14 +52,13 @@
           <a href="https://www.twitter.com/_@MuallimB2000_/" class="btn btn-success">follow Me <i class="fab fa-twitter"></i></a>
         </div>
    </section>
- 
-  <!-- My Skills Section -->
+ <!-- My Skills Section -->
   <section id="myskills" class="py-5 bg-light text-dark">
     <div class="container Skills">
       <h2 class="text-center mb-4 fw-bold">My Skills</h2>
       <div class="row">
         <div class="col-lg-4 mb-4">
-          <div class="card bg-light text-dark hover">
+          <div class="card hover">
             <div class="card-body">
               <h5 class="card-title">HTML</h5>
               <p class="card-text">HyperText Markup Language</p>
@@ -67,7 +67,7 @@
           </div>
         </div>
         <div class="col-lg-4 mb-4">
-          <div class="card bg-light text-dark hover">
+          <div class="card hover">
             <div class="card-body">
               <h5 class="card-title">CSS</h5>
               <p class="card-text">Cascading Style Sheet</p>
@@ -76,7 +76,7 @@
           </div>
         </div>
         <div class="col-lg-4 mb-4">
-          <div class="card bg-light text-dark hover">
+          <div class="card hover">
             <div class="card-body">
               <h5 class="card-title">BOOTSTRAP5</h5>
               <p class="card-text">The Most Popular CSS framework</p>
@@ -87,6 +87,7 @@
       </div>
     </div>
   </section>
+  <!--Footer section-->
    <footer class="py-4 bg-success text-light text-center mb-0">
     <div class="footer_icons">
     <ul>
@@ -107,12 +108,11 @@
       <p>&copy; 2024 Muhammad Bashir</p>
     </div>
   </footer>
-  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" 
-  integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" 
-  crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js" 
-  integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+" 
-  crossorigin="anonymous"></script>
+  <!-- scripts -->
+  <!-- Bootstrap -->
+  <script src="assets/Bootstrap/js/bootstrap.bundle.min.js"></script> 
+  <script src="assets/Bootstrap/js/bootstrap.min.js"></script> 
+  <!--Custom js-->
   <script  src="index.js"></script>
   </body>
 </html>
