--- a/contact.html
+++ b/contact.html
@@ -79,15 +79,15 @@
               <a href="#"><i class="fab fa-google"></i></a>
             </li>
             <li>
-              <a href="#"><i class="fab fa-facebook"></i></a>
+              <a href="https://www.facebook.com/MuallimBashir"><i class="fab fa-facebook"></i></a>
             </li>
             <li>
-              <a href="#"><i class="fab fa-linkedin"></i></a>
+              <a href="https://www.linkedin.com/in/MuhammadBashir"><i class="fab fa-linkedin"></i></a>
             </li>
             <li>
-              <a href="#"><i class="fab fa-github"></i></a>
+              <a href="https://github.com/Mbash2000"><i class="fab fa-github"></i></a>
             </li>
-             <li><a href="#"><i class="fab fa-twitter"></i></a>
+             <li><a href="https://twitter.com/MuallimB2000"><i class="fab fa-twitter"></i></a>
              </li>
           </ul>
         </div>
@@ -119,15 +119,15 @@
     <div class="footer_icons">
       <ul>
         <li>
-          <a href="#"><i class="fab fa-telegram"></i></a>
+          <a href="https://t.me/Muallim2000"><i class="fab fa-telegram"></i></a>
         </li>
         <li>
-          <a href="#"><i class="fab fa-whatsapp"></i></a>
+          <a href="https://wa.me/09161609808?text=Hello%20there!"><i class="fab fa-whatsapp"></i></a>
         </li>
         <li>
-          <a href="#"><i class="fas fa-envelope"></i></a>
+          <a href="mailto:muhammadbashir4338@gmail.com"><i class="fas fa-envelope"></i></a>
         </li>
-         <li><a href="#"><i class="fab fa-facebook"></i></a>
+         <li><a href="https://www.facebook.com/MuallimBashir"><i class="fab fa-facebook"></i></a>
          </li>
       </ul>
     </div>
