--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <h1 class="fw-bold">Hi, I am <span class="text-success"> Muhammad Bashir(Muallim)</span> Web developer 
           intern at Shahuci Global Recourses <a href="https://www.SGR.com.ng" class="text-success">SGR</a>
         </h1>
-          <a href="https://www.twitter.com/_@MuallimB2000_/" class="btn btn-success">follow Me <i class="fab fa-twitter"></i></a>
+          <a href="https://twitter.com/MuallimB2000" class="btn btn-success">follow Me <i class="fab fa-twitter"></i></a>
         </div>
    </section>
  <!-- My Skills Section -->
@@ -90,20 +90,20 @@
   <!--Footer section-->
    <footer class="py-4 bg-success text-light text-center mb-0">
     <div class="footer_icons">
-    <ul>
-      <li>
-        <a href="#"><i class="fab fa-telegram"></i></a>
-      </li>
-      <li>
-        <a href="#"><i class="fab fa-whatsapp"></i></a>
-      </li>
-      <li>
-        <a href="#"><i class="fas fa-envelope"></i></a>
-      </li>
-       <li><a href="#"><i class="fab fa-facebook"></i></a>
-       </li>
-    </ul>
-  </div>
+      <ul>
+        <li>
+          <a href="https://t.me/Muallim2000"><i class="fab fa-telegram"></i></a>
+        </li>
+        <li>
+          <a href="https://wa.me/09161609808?text=Hello%20there!"><i class="fab fa-whatsapp"></i></a>
+        </li>
+        <li>
+          <a href="mailto:muhammadbashir4338@gmail.com"><i class="fas fa-envelope"></i></a>
+        </li>
+         <li><a href="https://www.facebook.com/MuallimBashir"><i class="fab fa-facebook"></i></a>
+         </li>
+      </ul>
+    </div>
     <div class="container text-center">
       <p>&copy; 2024 Muhammad Bashir</p>
     </div>
@@ -115,4 +115,4 @@
   <!--Custom js-->
   <script  src="index.js"></script>
   </body>
-</html>
+ </html>
